force-app/main/default/objects/Compliance_Flag__c/Compliance_Flag__c.object-meta.xml
<CustomObject>
    <label>Compliance Flag</label>
    <nameField>
        <label>Compliance Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>