force-app/main/default/objects/Compliance_Flag__c/fields/Flag_Severity__c.field-meta.xml
<CustomField>
    <fullName>Flag_Severity__c</fullName>
    <label>Flag Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>