force-app/main/default/objects/Compliance_Flag__c/fields/Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_Status__c</fullName>
    <label>Flag Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>