force-app/main/default/objects/Compliance_Flag__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <label>Flag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Sanctions</fullName>
            </value>
            <value>
                <fullName>Unusual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>